@@ -105,6 +105,7 @@ declare -a SOURCES=(
   Tools/update_cartouches.scala
   Tools/update_header.scala
   Tools/update_semicolons.scala
+  Tools/update_then.scala
   library.scala
   term.scala
   term_xml.scala
