@@ -368,6 +368,15 @@ replacement character "␣" (Unicode point 0x2324).  For example:
 running Isabelle/jEdit process. This achieves the effect of
 single-instance applications seen on common GUI desktops.
 
+* Command-line tool "isabelle update_then" expands old Isar command
+conflations:
+
+    hence  ~>  then have
+    thus   ~>  then show
+
+This syntax is more orthogonal and improves readability and
+maintainability of proofs.
+
 * Poly/ML default platform architecture may be changed from 32bit to
 64bit via system option ML_system_64. A system restart (and rebuild)
 is required after change.
